# biliup-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.yaml  flake.nix  sqlx-data.json
.github/: .config  Dockerfile
.github/workflows/: CI.yml  release.yml
crates/biliup/: Cargo.toml
crates/biliup-cli/: Cargo.toml
crates/biliup-cli/src/: cli.rs  downloader.rs  main.rs  server.rs  uploader.rs
crates/biliup-cli/src/server/: errors.rs
crates/biliup-cli/src/server/api/: bilibili_endpoints.rs  router.rs
crates/biliup-cli/src/server/core/: download_actor.rs  live_streamers.rs  main_loop.rs  upload_actor.rs  upload_streamers.rs
crates/biliup-cli/src/server/infrastructure/: live_streamers_service.rs
crates/biliup/migrations/: 1_initial.sql
crates/biliup/queries/: get_streamers.sql  insert_streamer.sql
crates/biliup/src/: client.rs  downloader.rs  error.rs  lib.rs  line.rs  main.rs  server.rs  uploader.rs  video.rs
crates/biliup/src/downloader/: error.rs  extractor.rs  flv_parser.rs  flv_writer.rs  hls.rs  httpflv.rs  util.rs
crates/biliup/src/downloader/extractor/: bilibili.rs  douyu.rs  huya.rs
crates/biliup/src/server/: core.rs  errors.rs
crates/biliup/src/server/api/: bilibili_endpoints.rs  endpoints.rs  router.rs
crates/biliup/src/server/core/: actor.rs  download_actor.rs  live_streamers.rs  main_loop.rs  upload_actor.rs  upload_streamers.rs  users.rs  util.rs
crates/biliup/src/server/infrastructure/: live_streamers_service.rs  service_register.rs
crates/biliup/src/server/infrastructure/repositories/: download_records_repository.rs  live_streamers_repository.rs  upload_records_repository.rs  upload_streamers_repository.rs  users_repository.rs  videos_repository.rs
crates/biliup/src/uploader/: bilibili.rs  cos.rs  credential.rs  line.rs  retryable.rs
crates/biliup/src/uploader/line/: cos.rs  kodo.rs  upos.rs
crates/stream-gears/: Cargo.toml  README.md  pyproject.toml
crates/stream-gears/src/: downloader.rs  error.rs  flv_writer.rs  lib.rs  login.rs  main.rs  uploader.rs
crates/stream-gears/src/downloader/: hls.rs  httpflv.rs
crates/stream-gears/stream_gears/: stream_gears.pyi
crates/stream-gears/tests/: login.py  test_upload.py
examples/: config.yaml  config.yaml.example
src/: cli.rs  client.rs  error.rs  lib.rs  line.rs  main.rs  uploader.rs  upos.rs  video.rs
src/uploader/: cos.rs  kodo.rs  retryable.rs  upos.rs
