[package]
name = "biliup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
reqwest_cookie_store = "0.2.0"
cookie_store = "0.15.0"
tokio = { version = "1", features = ["full"] }
# serde_json is just for the example, not required in general
#serde_json = { version = "1.0", features = ["preserve_order"] }
serde_json = "1.0"
anyhow = "1.0"
rsa = "0.5.0"
base64 = "0.13.0"
md-5 = "0.9.1"
hex-literal = "0.3.3"
rand = "0.8.4"
url = "2.2.2"
thiserror = "1.0"
cookie = "0.15.1"
time = "0.3.4"
bytes = "1.1.0"
futures = "0.3.17"
tokio-util = { version = "0.6.9", features = ["io", "codec", "compat"] }
futures-util =  { version = "0.3.17", features = ["io"] }
async-std = "1.10.0"
async-stream = "0.3.2"
typed-builder = "0.9.1"
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"
serde_urlencoded = "0.7"
dialoguer = "0.9.0"
clap = { version = "3.0.0-rc.3", features = ["derive"] }